server runnig with api two collections
